# MCPLearning

./: .gitignore  README.md  main.py  pyproject.toml
chapter03/: calculator_server.py
chapter10/: .env.test.example  .gitignore  AGENT.md  README.md  background_input_monitor.py  clarification_handler.py  config.sample.yaml  config.yaml  config_manager.py  connection_manager.py  conversation_manager.py  display_manager.py  display_manager_rich.py  error_handler.py  interrupt_manager.py  llm_interface.py  mcp_agent.py  mcp_agent_repl.py  mcp_servers.json  minimal_agent.py  minimal_config.yaml  prompts.py  pyproject.toml  pytest.ini  repl_command_handlers.py  repl_commands.py  requirements-test.txt  run_tests.py  state_manager.py  task_executor.py  task_manager.py  utils.py
chapter10/tests/: README.md  conftest.py
chapter10/tests/e2e/: __init__.py  test_real_calculation.py
chapter10/tests/functional/: test_calculation_tasks.py  test_clarification_persistence.py  test_clarification_workflow.py  test_esc_functionality.py  test_esc_task_management.py  test_repl_commands.py  test_use_cases.py
chapter10/tests/integration/: test_conversation_logging.py  test_encoding.py  test_error_retry.py  test_gpt5_support.py  test_interrupt_fixes.py  test_interrupt_integration.py  test_llm_sql_correction.py  test_llm_sql_simple.py  test_log_filtering.py  test_parameter_resolution.py  test_session_state_flow.py
chapter10/tests/smoke/: __init__.py  test_minimal_real.py
chapter10/tests/unit/: test_interrupt_manager.py  test_logger.py  test_state_manager.py  test_task_manager.py
(+27 files in other folders)
